tests/NormalTests/paczka1/fuzzy1/95376837.err
Error in line 2: rBvTsGg A85 99,4
Error in line 6: mGQAAxW A85 70,6
Error in line 9: S358 S358 58,2
Error in line 11: qkmOcMK A687 44,4
Error in line 16: mGQAAxW S358 71,9
